--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -20,7 +20,7 @@ RUN \
   rm -rf /var/lib/apt/lists && \
   true
 COPY requirements.txt ./
-RUN pip3 wheel --wheel-dir=/tmp/wheels -r ./requirements.txt
+RUN pip3 wheel --wheel-dir=/tmp/wheels -r ./requirements.txt  --use-feature=2020-resolver
 
 FROM build AS collectstatic
 
