--- a/.github/workflows/flake8-your-pr.yml
+++ b/.github/workflows/flake8-your-pr.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         # by default the pull_requst_target event checks out the base branch, i.e. dev
-        # so we need to explicitly checkout the head of the PR
+        # so we need to explicitly checkout the head of the PR, which lives inside the repo of the pull request author
         # we use fetch-depth 0 to make sure the full history is checked out and we can compare against
         # the base commit (branch) of the PR
         # more info https://github.community/t/github-actions-are-severely-limited-on-prs/18179/16
