--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -11,9 +11,10 @@ jobs:
         # we use fetch-depth 0 to make sure the full history is checked out and we can compare against
         # the base commit (branch) of the PR
         # more info https://github.community/t/github-actions-are-severely-limited-on-prs/18179/16
+        # we checkout merge_commit here as this contains all new code from dev also. we don't need to compare against base_commit
         with:
           fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
+          ref: ${{github.event.pull_request.merge_commit}}
           # repository: ${{github.event.pull_request.head.repo.full_name}}
       
       - name: Set integration-test mode
